# convco

./: .gitpod.yml  .markdownlint.yaml  .markdownlintignore  .pre-commit-config.yaml  .rustfmt.toml  .versionrc  CHANGELOG.md  Cargo.toml  Dockerfile  Justfile  LICENSE  README.md  RELEASING.md  build.rs  docker-bake.hcl  release.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: docker.yml  main.yml  pr.yml  release-cargo.yml  release-crates.io.yml  release.yml
contrib/docker/devcontainer/: Dockerfile  build.sh
contrib/docker/gitpod/: Dockerfile  build.sh
src/: cli.rs  cmd.rs  conventional.rs  error.rs  git.rs  lib.rs  main.rs  semver.rs  strip.rs  version.rs
src/cmd/: changelog.rs  check.rs  commit.rs  completions.rs  config.rs  release.rs  version.rs
src/conventional/: changelog.rs  commit.rs  commits.rs  config.rs  mod.rs
src/conventional/changelog/: commit.hbs  config.rs  handlebars.rs  header.hbs  mod.rs  template.hbs
src/conventional/commit/: message.hbs
src/git/: git_git2.rs  git_gix.rs
tests/: backend_contract.rs  check_test.rs  cli.rs  completions.rs
tests/commands/: changelog.rs  check.rs  mod.rs  version.rs
tests/commands/snapshots/: cli__commands__check__check_with_strip_strips_comment_lines.snap  cli__commands__check__check_without_strip_fails_on_comment_first_line.snap
tests/common/: mod.rs
tests/snapshots/: cli__changelog_custom_unreleased_title.snap  cli__changelog_explicit_branch_revision_is_used_as_section_title.snap  cli__changelog_explicit_sha_range_uses_upper_sha_as_section_title.snap  cli__changelog_heading_levels_use_current_version_patch_status.snap  cli__changelog_line_length_limits_wrapping.snap  cli__changelog_links_references_with_remote_derived_repository_metadata.snap  cli__changelog_max_versions_one_with_unreleased.snap  cli__changelog_max_versions_one_without_unreleased.snap  cli__changelog_merges_includes_merge_commits.snap  cli__changelog_merges_with_first_parent_skips_branch_commits.snap  cli__changelog_no_wrap_retains_long_lines.snap  cli__changelog_paths_filter_merge_commits_against_first_parent.snap  cli__changelog_paths_with_filter_includes_only_matching.snap  cli__changelog_paths_without_filter_includes_all_commits.snap  cli__changelog_range_both_tags.snap  cli__changelog_range_sha_bounds.snap  cli__changelog_range_sha_upper_bound.snap  cli__changelog_range_tag_lower_bound.snap  cli__changelog_range_tag_upper_bound.snap  cli__changelog_succeeds_on_conventional_commits.snap  cli__changelog_unreleased_semver_patch_uses_patch_heading.snap  cli__changelog_wrap_applies_default_wrapping.snap  cli__check_fails_on_non_conventional_branch_commits.snap  cli__check_fails_on_non_conventional_commits.snap  cli__check_fails_on_non_conventional_merge_when_flag_is_set.snap  cli__check_fails_on_revert_commits_without_flag.snap  cli__check_ignore_message_pattern_config_skips_matching_commits.snap  cli__check_ignore_message_pattern_invalid_regex_fails.snap  cli__check_ignores_revert_commits_with_flag.snap  cli__check_includes_merge_commits_when_flag_is_set.snap  cli__check_merges_with_first_parent_skips_non_conventional_branch.snap  cli__check_range_checks_commits_from_low_to_high.snap  cli__check_succeeds_on_conventional_commits.snap  cli__check_unsupported_type_reports_full_subject.snap
