[package]
name = "convco"
version = "0.6.1"
description = "Conventional commit tools"
keywords = ["conventional", "commit", "changelog", "semantic", "versioning"]
categories = ["development-tools::build-utils"]
readme = "README.md"
homepage = "https://convco.github.io"
repository = "https://github.com/convco/convco.git"
license = "MIT"
authors = ["Hannes De Valkeneer <hannes@de-valkeneer.be>"]
edition = "2021"
include = [
    "build.rs",
    "src/*",
    "README.md",
    "LICENSE"
]
rust-version = "1.60" # for `--features`

[dependencies]
anyhow = { version = "1.0.89", features = ["backtrace"] }
clap = { version = "4.5.20", features = ["derive", "env"] }
ctrlc = "3.4.5"
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
git2 = { version = "0.19.0", default-features = false }
handlebars = "6.1.0"
regex = "1.11.0"
semver = "1.0.23"
serde = { version = "1.0.210", features = ["derive"] }
serde_yaml = "0.9.32"
thiserror = "1.0.64"
time = { version = "0.3.36", features = [ "serde-human-readable" ] }
url = "2.5.2"
walkdir = "2.5.0"

[build-dependencies]
clap = { version = "4.5.20", features = ["derive", "env"] }
clap_complete = "4.5.32"
semver = "1.0.23"

[features]
default = ["zlib-ng-compat"]
zlib-ng-compat = ["git2/zlib-ng-compat"]

[profile.release]
strip = true

[package.metadata.deb]
depends = ""
extended-description = """\
Conventional commit tools. \
Create a changelog. \
Check if commits follow the convention. \
Calculate the next version based on the conventional commits."""
assets = [
    # bin
    ["bin/convco", "/usr/local/bin/", "755"],
    # completions
    ["target/completions/convco.bash", "/usr/share/bash-completion/completions/", "644"],
    ["target/completions/_convco", "/usr/share/zsh/vendor-completions/", "644"],
    ["target/completions/convco.fish", "/usr/share/fish/completions/", "644"],
]
