[package]
name = "convco"
version = "0.6.2"
description = "Conventional commit tools"
keywords = ["conventional", "commit", "changelog", "semantic", "versioning"]
categories = ["development-tools::build-utils"]
readme = "README.md"
homepage = "https://convco.github.io"
repository = "https://github.com/convco/convco.git"
license = "MIT"
authors = ["Hannes De Valkeneer <hannes@de-valkeneer.be>"]
edition = "2021"
include = [
    "build.rs",
    "src/*",
    "README.md",
    "LICENSE"
]
rust-version = "1.60" # for `--features`

[dependencies]
anyhow = { version = "1.0.100", features = ["backtrace"] }
clap = { version = "4.5.53", features = ["derive", "env"] }
ctrlc = "3.4.7"
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
git2 = { version = "0.20.2", default-features = false }
handlebars = "6.3.2"
jiff = { version = "0.2.15", features = ["serde"] }
regex = "1.11.1"
semver = { version = "1.0.26", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_norway = "0.9.42"
thiserror = "2.0.17"
url = "2.5.4"
walkdir = "2.5.0"
clap_complete = { version = "4.5.57", optional = true }
strsim = "0.11.1"

[build-dependencies]
clap_complete = "4.5.57"
clap = { version = "4.5.53", features = ["derive", "env"] }
semver = "1.0.26"

[features]
default = ["zlib-ng-compat"]
zlib-ng-compat = ["git2/zlib-ng-compat"]
completions = ["dep:clap_complete"]

[profile.release]
strip = true

[package.metadata.deb]
depends = ""
extended-description = """\
Conventional commit tools. \
Create a changelog. \
Check if commits follow the convention. \
Calculate the next version based on the conventional commits."""
assets = [
    # bin
    ["bin/convco", "/usr/local/bin/", "755"],
    # completions
    ["target/completions/convco.bash", "/usr/share/bash-completion/completions/", "644"],
    ["target/completions/_convco", "/usr/share/zsh/vendor-completions/", "644"],
    ["target/completions/convco.fish", "/usr/share/fish/completions/", "644"],
]
