[package]
name = "convco"
version = "0.6.4"
description = "Conventional commit tools"
keywords = ["conventional", "commit", "changelog", "semantic", "versioning"]
categories = ["development-tools::build-utils"]
readme = "README.md"
homepage = "https://convco.github.io"
repository = "https://github.com/convco/convco.git"
license = "MIT"
authors = ["Hannes De Valkeneer <hannes@de-valkeneer.be>"]
edition = "2021"
include = [
    "build.rs",
    "src/*",
    "README.md",
    "LICENSE"
]
rust-version = "1.87"

[dependencies]
anyhow = { version = "1.0.102", features = ["backtrace"] }
bstr = "1.12.1"
clap = { version = "4.6.1", features = ["derive", "env"] }
clap_complete = { version = "4.6.5", optional = true }
ctrlc = "3.5.2"
dialoguer = { version = "0.12.0", features = ["fuzzy-select"] }
git2 = { version = "0.21.0", default-features = false, optional = true }
gix = { version = "0.85.0", default-features = false, features = ["revision", "blob-diff", "sha1", "sha256"], optional = true }
gix-hash = { version = "0.25.1", default-features = false, features = ["sha1", "sha256"], optional = true }
handlebars = { version = "6.4.1", features = ["dir_source"] }
jiff = { version = "0.2.28", features = ["serde"] }
regex = "1.12.4"
semver = { version = "1.0.28", features = ["serde"] }
serde = { version = "1.0.228", default-features = false, features = ["derive", "std"] }
serde_norway = "0.9.42"
strsim = "0.11.1"
thiserror = "2.0.18"
url = "2.5.8"
walkdir = "2.5.0"

[build-dependencies]
clap_complete = "4.6.5"
clap = { version = "4.6.1", features = ["derive", "env"] }
semver = "1.0.28"

[features]
default = ["git2", "zlib-ng-compat"]
git2 = ["dep:git2", "git2/unstable-sha256"]
gix = ["dep:gix", "dep:gix-hash"]
zlib-ng-compat = ["git2/zlib-ng-compat"]
completions = ["dep:clap_complete"]
integration-tests = []

[profile.release]
strip = true

[dev-dependencies]
assert_cmd = { version = "2.2.2", features = [] }
tempfile = { version = "3.27.0" }
insta = { version = "1.48.0", features = ["redactions", "yaml"] }
